--- a/simple-evidence-test.yaml
+++ b/simple-evidence-test.yaml
@@ -40,7 +40,7 @@ spec:
     - name: revision
       value: "main"
     - name: ociStorage
-      value: "$(params.output-image).git"
+      value: "$(params.output-image)"
     - name: ociArtifactExpiresAfter
       value: "$(params.image-expires-after)"
   
